--- a/desktop.ini
+++ b/desktop.ini
@@ -1,5 +1,5 @@
 [.ShellClassInfo]
-IconResource=D:\git\python\AutoTyper\app_icon.ico,0
+IconResource=D:\git\python\AutoTyper\assets\app_icon.ico,0
 [ViewState]
 Mode=
 Vid=
